Name:                elerea
Version:             1.1.0
Cabal-Version:       >= 1.2
Synopsis:            A minimalistic FRP library
Category:            reactivity, FRP
Description:

 Elerea (Eventless reactivity) is a tiny continuous-time FRP
 implementation without the notion of event-based switching and
 sampling, with first-class signals (time-varying values).  Reactivity
 is provided through various higher-order constructs that also allow
 the user to work with arbitrary time-varying structures containing
 live signals.
 .
 Stateful signals can be safely generated at any time through a
 specialised monad, while stateless combinators can be used in a
 purely applicative style.  Elerea signals can be defined recursively,
 and external input is trivial to attach.  A unique feature of the
 library is that cyclic dependencies are detected on the fly and
 resolved by inserting delays dynamically, unless the user does it
 explicitly.
 .
 This is a minimal library that defines only some basic primitives,
 and you are advised to install @elerea-examples@ as well to get an
 idea how to build non-trivial systems with it.  The examples are
 separated in order to minimise the dependencies of the core library.

Author:              Patai Gergely
Maintainer:          Patai Gergely (patai@iit.bme.hu)
Copyright:           (c) 2009, Patai Gergely
License:             BSD3
License-File:        LICENSE
Stability:           experimental
Build-Type:          Simple
Extra-Source-Files:
  CHANGES

Library
  Exposed-Modules:
    FRP.Elerea
    FRP.Elerea.Internal
    FRP.Elerea.Graph
    FRP.Elerea.Experimental
    FRP.Elerea.Experimental.Simple
    FRP.Elerea.Experimental.Param

  Build-Depends:       base >= 3 && < 5, containers, ghc-prim
  ghc-options:         -Wall -O2
